<resources>
    <string name="app_name">MotoShared</string>

    <string name="name">Nome</string>
    <string name="username">Nome de usuário</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="age">Idade</string>
    <string name="owner">Proprietário</string>
    <string name="price">Preço</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="year">Ano</string>
    <string name="phone">Celular para contato</string>
    <string name="takePicture">Tirar Foto</string>

    <string name="login">Entrar</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="createMotorcycle">Cadastrar Moto a Ser Vendida</string>

    <string name="forgotMyPass">Esqueci a senha</string>
    <string name="createAccount">Criar uma conta</string>
    <string name="title_activity_main_profile">MainProfile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
